--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -1,11 +1,15 @@
 @use '../_custom.scss' as *;
 
+.cart-container {
+  position: relative;
+}
 .cart {
   position: absolute;
+  background-color: #fff;  
   right: 0;
   left: 50%;
   top: 100%;
-  transform: translateX(-50%);
+  transform: translateX(-50%); 
   width: 95%;
   min-height: 250px;
   max-height: fit-content;
@@ -74,10 +78,5 @@
   }
   .empty {
     display: none;
-  }
-}
-.nav-container {
-  @media (min-width: 992px) {
-    position: relative;
   }
 }
